# deep_analysis_of_school_dropout_in_mexico

./: Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: AED.ipynb  CleaningData.ipynb  FeaturesEng.ipynb
